fixes display bug for collapsed items within a nested menu (#146)

--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -27,7 +27,9 @@ li.nav-header-gray { // maybe call this something difft?
   border-bottom: 1px dotted #ddd;
 }
 
-.nav-list > li.leaf, .nav-list > li.expanded {
+.nav-list > li.leaf,
+.nav-list > li.collapsed,
+.nav-list > li.expanded {
   & a {
     text-transform: uppercase;
     font-size: 16px;
